ansible/roles/openshift_grafana_influxdb/templates/influxdb/influxdb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: influxdb-service
spec:
  type: ClusterIP
  ports:
    - port: 8086
      protocol: TCP
  selector:
    app: influxdb
