ansible/roles/openshift_grafana_influxdb/templates/influxdb/influxdb-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: influxdb-service
  annotations:
    openshift.io/host.generated: 'true'
spec:
  to:
    kind: Service
    name: influxdb-service
    weight: 100
  port:
    targetPort: 8086
  wildcardPolicy: None
